<resources>
    <string name="app_name">ImageCraft</string>
    <string name="functions">Functions</string>
    <string name="rateContent">Rate the app on Google Play</string>
    <string name="shareContent">Share the app with others</string>
    <string name="emailContent">Send feedback e-mail to developer</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="app_version">Version</string>
    <string name="app_osl">Open Source Licenses</string>
    <string name="get_more_apps">Explore more Apps</string>
    <string name="themeContent">Change app\'s theme</string>
    <string name="languageContent">Change app\'s language</string>
    <string name="more">More</string>
    <string name="light">Light Theme</string>
    <string name="dark">Dark Theme</string>
    <string name="systemTheme">Follow System Theme</string>
    <string name="thank">Thanks for using!</string>
    <string name="shareText">ImageCraft is a powerful image processing app with material theme design. It provides functions such as batch compression of photos, rotation of photos, format conversion, etc. Go to the Google Play and download ImageCraft now! https://play.google.com/store/apps/details?id=com.yangdai.imagecraft</string>
    <string name="subtitle">The most elegant image processing assistant ~ 😍</string>
    <string name="theme">Theme</string>
    <string name="language">Language</string>
    <string name="rate">Rate</string>
    <string name="share">Share</string>
    <string name="e_mail">E-mail</string>
    <string name="compress">Compress Image</string>
    <string name="compressDescription">Compress image size in batches</string>
    <string name="resize">Resize Image</string>
    <string name="resizeDescription">Adjust image size in batches</string>
    <string name="crop">Crop Image</string>
    <string name="cropDescription">Crop single image to remove redundant parts</string>
    <string name="convert">Convert Format</string>
    <string name="convertDescription" translatable="false">JPEG ⇄ PNG ⇄ WEBP</string>
    <string name="rotate">Rotate Image</string>
    <string name="rotateDescription">Adjust image angles in batches</string>
    <string name="picker">Pick Color</string>
    <string name="pickerDescription">Get the color anywhere in the image</string>
    <string name="ocr">OCR</string>
    <string name="ocrDescription">Get the text content in the image</string>
    <string name="saved">The image has been saved to album</string>
    <string name="image_info">Information</string>
    <string name="resize_method">Resize Method</string>
    <string name="according_percent">By percentage</string>
    <string name="according_custom">By pixel</string>
    <string name="width">Width:</string>
    <string name="height">Height:</string>
    <string name="selected">photos were selected and took up a total of</string>
    <string name="check">Check</string>
    <string name="start">Start</string>
    <string name="output_format">Output Format</string>
    <string name="degree">Rotation Angle</string>
    <string name="flipV">Vertical Flip</string>
    <string name="flipH">Horizontal Flip</string>
    <string name="example">Sample</string>
    <string name="compress_method">Compress Method</string>
    <string name="auto">Auto, will not change resolution</string>
    <string name="specified_size">Specify size, keep resolution as much as possible</string>
    <string name="processing">Processing</string>
    <string name="md">Material You</string>
    <string name="md_content">Generate a MD3 theme based on the selected image</string>
    <string name="finished">Processing completed🎉\n%1$d&#160;photos processed,&#160;%2$d&#160;photos skipped</string>
    <string name="cancelled">Processing has been cancelled ❌</string>
    <string name="permissions">Permissions</string>
    <string name="permission_hint">Please agree to the necessary permissions to use full functionality</string>
    <string name="exit">Exit</string>
    <string name="open_settings">Open Settings</string>
    <string name="pdf_to_image">PDF to Image</string>
    <string name="pdf_content">Convert every page in PDF to image</string>
    <string name="image_to_pdf">Image to PDF</string>
    <string name="image_to_pdf_content">Convert images to PDF files</string>
    <string name="convert_method">Convert Method</string>
    <string name="to_files">Save each image as a separate PDF file</string>
    <string name="to_one_file">Save all images as one PDF file</string>
    <string name="page_settings">Page Settings</string>
    <string name="vertical">Vertical</string>
    <string name="landscape">Landscape</string>
    <string name="image_size">Match Image</string>
    <string name="choose_background">Choose background color</string>
    <string name="image_to_zip">Image to Zip</string>
    <string name="convert_images_to_zip_file">Convert images to .Zip file</string>
    <string name="packing_method">Packing Method</string>
    <string name="no_password">No password</string>
    <string name="with_password">With password</string>
    <string name="password">Password: </string>
    <string name="password_content">numbers, letters, special symbols</string>
    <string name="file_name">File name:</string>
    <string name="file_name_content">numbers, letters, underscores</string>
    <string name="about">About</string>
    <string name="about_content">If you like the app, please give a good review on the Google Play\nIf you encounter any problems, please give feedback to the author</string>
    <string name="help">Help</string>
    <string name="using_help">Using Help</string>
    <string name="help_content">Due to Google design limitations, EXIF metadata may not be obtained correctly when using the photo picker.\n\nImages are saved to an album named ImageCraft.\nThey can also be found in the system folder-Internal storage-Pictures-ImageCraft.\n\nOther types of files such as .zip and PDF will be saved to the system folder-Internal storage-Download-ImageCraft.</string>
    <string name="gif_to_image">Gif to Image</string>
    <string name="convert_each_frame_of_gif_to_image">Convert each frame of gif to image</string>
    <string name="video_to_gif">Video to Gif</string>
    <string name="video_to_gif_content">Convert video to gif</string>
    <string name="gif_fps">Gif Frame Rate</string>
    <string name="gif_interval">Gif Frame Rate Interval</string>
    <string name="no_interval">No interval</string>
    <string name="match_fps">Match the frame rate</string>
    <string name="yang_s_codehub" translatable="false">
        <a href="https://yangdai2003.github.io/">Yang\'s CodeHub</a>
    </string>
    <string name="photo_picker">Image Source</string>
    <string name="use_picker">Use photo picker</string>
    <string name="use_system_albums">Use system albums</string>
    <string name="photo_picker_content">Change the way to select images</string>
    <string name="exif">EXIF Information</string>
    <string name="exif_content">View and edit EXIF metadata</string>
    <string name="save">Save</string>
    <string name="add">Add metadata</string>
    <string name="activity_embedding">Activity Embedding</string>
    <string name="embedding_content">Display activities in parallel on large-screen devices</string>
    <string name="on">On</string>
    <string name="off">Off</string>
    <string name="share_color">Share</string>
    <string name="gif_resolution">Gif Resolution</string>
    <string name="github_content">Discuss issues or submit contributions on Github</string>

</resources>