<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".functions_standard.CompressActivity">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:animateLayoutChanges="true"
            android:paddingBottom="80dp"
            app:layout_constraintWidth_max="700dp">

            <TextView
                android:id="@+id/info_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/image_info"
                android:textColor="?colorPrimary"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/info_content"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:textSize="14sp"
                android:textStyle="normal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/info_title" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/carousel_recycler_view"
                android:layout_width="0dp"
                android:layout_height="250dp"
                android:layout_margin="8dp"
                android:clipChildren="false"
                android:clipToPadding="false"
                android:orientation="horizontal"
                app:layoutManager="com.google.android.material.carousel.CarouselLayoutManager"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/info_content" />

            <com.google.android.material.divider.MaterialDivider
                android:id="@+id/info_div"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:alpha="0.5"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/carousel_recycler_view" />

            <TextView
                android:id="@+id/method"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/compress_method"
                android:textColor="?colorPrimary"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/info_div" />

            <RadioGroup
                android:id="@+id/radioGroup"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/method">

                <com.google.android.material.radiobutton.MaterialRadioButton
                    android:id="@+id/auto"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:text="@string/auto"
                    android:textSize="14sp" />

                <com.google.android.material.radiobutton.MaterialRadioButton
                    android:id="@+id/custom"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/specified_size"
                    android:textSize="14sp" />
            </RadioGroup>

            <LinearLayout
                android:id="@+id/lr_for_slider"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingEnd="8dp"
                android:visibility="invisible"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/radioGroup"
                tools:ignore="RtlSymmetry"
                tools:visibility="visible">

                <com.google.android.material.slider.Slider
                    android:id="@+id/slider"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="17"
                    android:stepSize="1"
                    android:value="2048"
                    android:valueFrom="500"
                    android:valueTo="2048" />

                <EditText
                    android:id="@+id/ed_percent"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:gravity="center"
                    android:importantForAutofill="no"
                    android:inputType="number"
                    android:maxLength="4"
                    android:text="2048"
                    tools:ignore="HardcodedText,LabelFor" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:text="KB"
                    android:textAlignment="center"
                    tools:ignore="HardcodedText" />
            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/bt_floating"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end|bottom"
        android:layout_margin="16dp"
        android:text="@string/start"
        app:icon="@drawable/compress_action" />
</androidx.coordinatorlayout.widget.CoordinatorLayout>

